--- a/src/app/components/orders/order-management.component.scss
+++ b/src/app/components/orders/order-management.component.scss
@@ -918,7 +918,7 @@
 }
  
 ::ng-deep .status-select-panel .mat-mdc-option.mdc-list-item--selected:not(.mdc-list-item--disabled) .mdc-list-item__primary-text {
-  color: #ffc107 !important; // Đổi thành màu bạn muốn
+  color: #ffc107 !important; 
   font-weight: bold;
 }
 .status-select-panel {
