--- a/src/app/components/products/product-list.component.html
+++ b/src/app/components/products/product-list.component.html
@@ -65,7 +65,7 @@
           <div class="product-info">
             <h3 class="product-name">{{ product.name }}</h3>
             <div class="product-price">
-              <span class="current-price">{{ product.price | currency:'VND':'symbol':'1.0-0' }}</span>
+              <span class="current-price">{{ product.price | number }} đ</span>
             </div>
             
             <div class="product-actions">
