--- a/src/app/components/products/product-admin.component.html
+++ b/src/app/components/products/product-admin.component.html
@@ -91,7 +91,7 @@
       <ng-container matColumnDef="price">
         <th mat-header-cell *matHeaderCellDef mat-sort-header="price" class="price-header">Price</th>
         <td mat-cell *matCellDef="let product" class="price-cell">
-          <span class="price-value">${{ product.price | number:'1.2-2' }}</span>
+          <span class="price-value">{{ product.price | number:'1.2-2' }}đ</span>
         </td>
       </ng-container>
 
