--- a/src/app/components/admin-layout/admin-layout.component.html
+++ b/src/app/components/admin-layout/admin-layout.component.html
@@ -40,12 +40,12 @@
           </a>
         </li>
         
-        <li class="nav-item">
+        <!-- <li class="nav-item">
           <a routerLink="/admin/users" routerLinkActive="active" class="nav-link">
             <mat-icon>people</mat-icon>
             <span *ngIf="sidebarOpen">Customer</span>
           </a>
-        </li>
+        </li> -->
         
       </ul>
 
