--- a/src/app/components/products/product-form-modal.component.html
+++ b/src/app/components/products/product-form-modal.component.html
@@ -122,36 +122,12 @@
             type="number" 
             formControlName="stockQuantity"
             class="form-control"
-            placeholder="0"
-            min="0"
+            placeholder="100"
+            min="100"
           />
         </div>
 
-        <!-- Min Stock Level -->
-        <div class="form-group">
-          <label for="minStockLevel">Min Stock Level</label>
-          <input 
-            id="minStockLevel"
-            type="number" 
-            formControlName="minStockLevel"
-            class="form-control"
-            placeholder="0"
-            min="0"
-          />
-        </div>
-
-        <!-- Max Stock Level -->
-        <div class="form-group">
-          <label for="maxStockLevel">Max Stock Level</label>
-          <input 
-            id="maxStockLevel"
-            type="number" 
-            formControlName="maxStockLevel"
-            class="form-control"
-            placeholder="0"
-            min="0"
-          />
-        </div>
+     
 
         <!-- Brand -->
         <div class="form-group">
@@ -165,29 +141,6 @@
           />
         </div>
 
-        <!-- Color -->
-        <div class="form-group">
-          <label for="color">Color</label>
-          <input 
-            id="color"
-            type="text" 
-            formControlName="color"
-            class="form-control"
-            placeholder="Enter color"
-          />
-        </div>
-
-        <!-- Size -->
-        <div class="form-group">
-          <label for="size">Size</label>
-          <input 
-            id="size"
-            type="text" 
-            formControlName="size"
-            class="form-control"
-            placeholder="Enter size"
-          />
-        </div>
 
         <!-- Material -->
         <div class="form-group">
@@ -213,20 +166,6 @@
           />
         </div>
 
-        <!-- Tax Rate -->
-        <div class="form-group">
-          <label for="taxRate">Tax Rate (%)</label>
-          <input 
-            id="taxRate"
-            type="number" 
-            formControlName="taxRate"
-            class="form-control"
-            placeholder="0"
-            min="0"
-            max="100"
-            step="0.01"
-          />
-        </div>
 
         <!-- Image Upload -->
         <div class="form-group full-width">
@@ -250,7 +189,7 @@
         </div>
 
         <!-- Checkboxes -->
-        <div class="form-group full-width">
+        <!-- <div class="form-group full-width">
           <div class="checkbox-grid">
             <label class="checkbox-label">
               <input type="checkbox" formControlName="isActive" />
@@ -258,7 +197,7 @@
               Active
             </label>
           </div>
-        </div>
+        </div> -->
       </div>
 
       <!-- Action Buttons -->
