--- a/src/app/components/products/product-form-modal.component.scss
+++ b/src/app/components/products/product-form-modal.component.scss
@@ -23,8 +23,9 @@
 }
 
 .close-button {
-  width: 32px;
-  height: 32px;
+
+  height: 43px !important;
+  width: 43px !important;
   border: none;
   background: none;
   cursor: pointer;
