--- a/src/app/components/checkout/checkout.component.html
+++ b/src/app/components/checkout/checkout.component.html
@@ -91,6 +91,7 @@
             </div>
             <div class="item-details">
               <h4>{{ getProductName(item) }}</h4>
+              <div *ngIf="item.size" class="item-size">Size: {{ item.size }}</div>
               <p>{{ getProductCategory(item) }}</p>
             </div>
             <div class="item-price">
