--- a/src/app/components/home/home.component.html
+++ b/src/app/components/home/home.component.html
@@ -113,29 +113,31 @@
   </section>
 
   <!-- Contact Information -->
+
+
   <section class="contact-info">
     <div class="container">
       <div class="contact-grid">
         <div class="contact-card">
-          <h4 class="contact-title">CHÍNH SÁCH</h4>
+          <h4 class="contact-title">Policy</h4>
           <ul class="contact-list">
-            <li><a href="#">Chính sách sử dụng website</a></li>
-            <li><a href="#">Phương thức thanh toán</a></li>
-            <li><a href="#">Chính sách đổi trả</a></li>
-            <li><a href="#">Chính sách giao nhận - vận chuyển</a></li>
-            <li><a href="#">Điều khoản dịch vụ</a></li>
-            <li><a href="#">Hướng dẫn mua hàng</a></li>
-            <li><a href="#">Chính sách bảo mật</a></li>
+            <li><a href="#">Website Usage Policy</a></li>
+            <li><a href="#">Payment Methods</a></li>
+            <li><a href="#">Return Policy</a></li>
+            <li><a href="#">Shipping Policy</a></li>
+            <li><a href="#">Terms of Service</a></li>
+            <li><a href="#">Shopping Guide</a></li>
+            <li><a href="#">Privacy Policy</a></li>
           </ul>
         </div>
         
         <div class="contact-card">
-          <h4 class="contact-title">Thông tin liên hệ</h4>
+          <h4 class="contact-title">Contact Information</h4>
           <ul class="contact-list">
-            <li>CÔNG TY TNHH HADES</li>
-            <li>SỐ CSKH: 02873011021 (10h -18h)</li>
-            <li>Ngày cấp: 20/07/2020</li>
-            <li>Tuyển dụng: hr&#64;hades.vn</li>
+            <li>COMPANY TNHH HADES</li>
+            <li>CUSTOMER SERVICE: 02873011021 (10h -18h)</li>
+            <li>Issued Date: 20/07/2020</li>
+            <li>Recruitment: hr&#64;hades.vn</li>
             <li>Website: hades.vn</li>
             <li>For business: contact&#64;hades.vn</li>
           </ul>
@@ -146,12 +148,6 @@
           <div class="social-links">
             <a href="#" class="social-link">
               <mat-icon>facebook</mat-icon>
-            </a>
-            <a href="#" class="social-link">
-              <mat-icon>instagram</mat-icon>
-            </a>
-            <a href="#" class="social-link">
-              <mat-icon>youtube</mat-icon>
             </a>
             <a href="#" class="social-link">
               <mat-icon>tiktok</mat-icon>
