--- a/src/app/components/orders/order-management.component.scss
+++ b/src/app/components/orders/order-management.component.scss
@@ -271,13 +271,17 @@
         border-radius: 0 0 8px 8px;
         box-shadow: inset 0 2px 4px rgba(0, 0, 0, 0.05);
       }
+
+      ::ng-deep .status-select .mat-select-value {
+          text-transform: capitalize;
+        }
       
       // Status badges
       .status-badge {
-        padding: 6px 12px;
+        padding:11px 39px;
         border-radius: 20px;
-        font-size: 0.875rem;
-        font-weight: 500;
+        font-size: 1.0rem;
+        font-weight: 700;
         text-transform: capitalize;
         display: inline-block;
         min-width: 100px;
@@ -575,6 +579,37 @@
       }
     }
   }
+}
+
+.custom-select-wrapper {
+  display: inline-block;
+  width: 160px;
+}
+
+.custom-select {
+  width: 100%;
+  padding: 10px 12px;
+  border: none; /* ❌ Loại bỏ viền */
+  border-radius: 12px;
+  background-color: #fff7d5;
+  color: #a37b00;
+  font-weight: 600;
+  appearance: none;
+  -webkit-appearance: none;
+  -moz-appearance: none;
+  background: none; /* ❌ Loại bỏ mũi tên */
+  cursor: pointer;
+}
+
+.custom-select:disabled {
+  opacity: 0.6;
+  cursor: not-allowed;
+}
+
+.custom-select option {
+  background-color: #2c2c2c;
+  color: white;
+  font-weight: 500;
 }
 
 .order-info {
@@ -906,6 +941,12 @@
 :host ::ng-deep .mat-mdc-select-panel .mat-mdc-option.mat-mdc-selected {
   color: #ffc107 !important;
   font-weight: 600;
+}
+
+:host ::ng-deep .mat-mdc-select-panel .mat-mdc-option.mat-pseudo-checkbox {
+  display: none !important;
+  width: 18px !important;
+  height: 18px !important;
 }
  
 ::ng-deep .status-select-panel .mat-mdc-option.mat-mdc-selected {
