--- a/src/app/components/products/product-form-modal.component.html
+++ b/src/app/components/products/product-form-modal.component.html
@@ -205,7 +205,7 @@
         <button type="button" class="btn btn-secondary" (click)="onCancel()">
           Cancel
         </button>
-        <button type="submit" class="btn btn-primary" [disabled]="productForm.invalid">
+        <button type="submit" class="btn btn-primary">
           Save
         </button>
       </div>
